force-app/main/default/objects/Proper_Batch_Operation_Result__c/Proper_Batch_Operation_Result__c.object-meta.xml
<CustomObject>
    <label>Proper Batch Operation Result</label>
    <nameField>
        <displayFormat>PBORC-{0000000}</displayFormat>
        <label>Proper Batch Operation Result Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proper Batch Operation Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>