force-app/main/default/objects/Proper_Batch_Operation_Result__c/fields/Batch_Operation__c.field-meta.xml
<CustomField>
    <fullName>Batch_Operation__c</fullName>
    <label>Batch Operation</label>
    <referenceTo>Proper_Batch_Operation__c</referenceTo>
    <relationshipLabel>Proper Batch Operation Results</relationshipLabel>
    <relationshipName>Proper_Batch_Operation_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>