force-app/main/default/objects/Proper_Batch_Operation_Result__c/fields/Is_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent__c</fullName>
    <formula>Object_Name__c =  Batch_Operation__r.Master_Object_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent</label>
    <type>Checkbox</type>
</CustomField>