force-app/main/default/objects/Proper_Batch_Operation_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch_Operation__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Record_Id__c</columns>
    <columns>Result__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>